--- a/css/styles.css
+++ b/css/styles.css
@@ -10432,12 +10432,12 @@ header.masthead .masthead-heading {
   margin-bottom: 3rem;
   text-align: center;
 }
-.team-member img {
+.team-member img  {
   width: 20rem;
   height: 20rem;
   border: 0.5rem solid rgba(0, 0, 0, 0.1);
 }
-#testimonials .team-member img {
+#testimonials .team-member img, #testimonials .team-member .fa-stack {
   width: 14rem;
   height: 14rem;
 }
